--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ h2{
 .fourth{
     border-radius: 50%;
     width: 30px;
-    height: auto;
+    height: 30px;
 }
 
 .qoute{
@@ -126,8 +126,9 @@ h2{
 
 .fourth-sect{
     position: relative;
+    margin: 0 auto;
     margin-top: 7rem;
-    padding-left: 10rem;
+    /* padding-left: 10rem; */
     padding-bottom: 4rem;
 }
 
@@ -137,6 +138,12 @@ h2{
     border-radius: 5px;
     width: 350px;
     padding: 40px 15px 30px 15px;
+    text-align: justify;
+}
+
+.contain {
+    display: flex;
+    gap: 1rem;
 }
 
 
