--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ li:hover{
 button{
     border: 2px solid #ffffff;
     border-radius: 10px;
-    background-color: #00ff00;
+    background-color: hsl(176, 68%, 64%);
     color: white;
     padding: 20px 100px;
     cursor: pointer;
@@ -80,8 +80,8 @@ button{
     color: white;
     margin-top: 7rem;
     align-items: center;
-    padding-left: 13rem;
-    padding-right: 13rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
     gap: 3rem;
 }
 
@@ -97,6 +97,7 @@ h2{
 
 .fylo{
     color: white;
+    /* padding-top: 15px; */
 }
 
 .box-container {
@@ -145,7 +146,10 @@ h2{
 .contain {
     display: flex;
     gap: 1rem;
+    margin-top: 7px;
 }
+
+.contain 
 
 
 span {
@@ -156,6 +160,26 @@ span {
     color: white;
 }
 
+.forms {
+    display: flex;
+}
 
+.fifth-sect {
+    background-color:  hsl(219, 30%, 18%);
+    border-radius: 5px;
+    width: 750px;
+    padding: 40px 15px 30px 15px;
+    margin-left: 10rem;
+    text-align: center;
+}
 
+label input {
+    border: 2px solid black;
+    padding: 10px 10px;
+    width: 200%;
+    height: 200%;
+}
 
+.buttons button{
+    margin-left: 200px;
+}
