--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ li:hover{
 }
 
 button{
-    border: 2px solid #ffffff;
+    border: none;
     border-radius: 10px;
     background-color: hsl(176, 68%, 64%);
     color: white;
@@ -147,10 +147,8 @@ h2{
     display: flex;
     gap: 1rem;
     margin-top: 7px;
+    align-items: center;
 }
-
-.contain 
-
 
 span {
     font-size: 12px;
@@ -168,18 +166,34 @@ span {
     background-color:  hsl(219, 30%, 18%);
     border-radius: 5px;
     width: 750px;
-    padding: 40px 15px 30px 15px;
-    margin-left: 10rem;
+    height: 220px;
+    padding: 2px 3px 2px 3px;
+    margin-left: 300px;
     text-align: center;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+
+.fifth-sect p{
+    padding-top: 10px;
 }
 
 label input {
-    border: 2px solid black;
-    padding: 10px 10px;
-    width: 200%;
-    height: 200%;
+    border: 1px solid black;
+    padding: 5px 18px;
+    width: 170%;
+    height: 150%;
+    border-radius: 50px;
+    margin-top: 15px;
+    margin-left: 20px;
 }
 
 .buttons button{
-    margin-left: 200px;
+    margin-left: 215px;
+    width: 228px;
+    padding: 20px 50px;
+    font-size: 15px;
+    border-radius: 50px;
+    border: none;
 }
