--- a/index.css
+++ b/index.css
@@ -45,6 +45,8 @@ li:hover{
 
 .hero h1{
     margin-top: 2rem;
+    font-size: 2.0rem;
+    padding-bottom: 15px;
 }
 
 button{
@@ -181,7 +183,7 @@ span {
 
 label input {
     border: 1px solid black;
-    padding: 5px 18px;
+    padding: 22px 18px;
     width: 170%;
     height: 150%;
     border-radius: 50px;
