--- a/index.css
+++ b/index.css
@@ -173,13 +173,20 @@ span {
     margin-left: 300px;
     text-align: center;
     align-items: center;
-    margin-bottom: 1px;
-    margin-top: 100px;
-    /* position: absolute; */
+    /* margin-bottom: -1px; */
+    /* margin-top: -100px; */
+    /* z-index: auto; */
+    position: absolute;
+}
+
+.fifth-sect h2{
+    /* margin-bottom: 1.5rem; */
 }
 
 .fifth-sect p{
     padding-top: 10px;
+    /* margin-bottom: 1.5rem; */
+    /* z-index: auto; */
 }
 
 label input {
@@ -206,12 +213,14 @@ footer {
     background-color: black;
     justify-content: space-around;
     color: white;
-    padding-top: 100px;
+    padding-top: 200px;
     padding-bottom: 50px;
     gap: 3rem;
-    position: relative;
+    /* position: relative; */
     top: 2px;
     align-items: center;
+    margin-top: 7.5rem;
+
 }
 
 .first-footer .for-footer {
