--- a/index.css
+++ b/index.css
@@ -173,20 +173,12 @@ span {
     margin-left: 300px;
     text-align: center;
     align-items: center;
-    /* margin-bottom: -1px; */
-    /* margin-top: -100px; */
-    /* z-index: auto; */
+    margin-top: 90px;
     position: absolute;
-}
-
-.fifth-sect h2{
-    /* margin-bottom: 1.5rem; */
 }
 
 .fifth-sect p{
     padding-top: 10px;
-    /* margin-bottom: 1.5rem; */
-    /* z-index: auto; */
 }
 
 label input {
@@ -213,13 +205,13 @@ footer {
     background-color: black;
     justify-content: space-around;
     color: white;
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 50px;
     gap: 3rem;
     /* position: relative; */
     top: 2px;
     align-items: center;
-    margin-top: 7.5rem;
+    margin-top: 15.5rem;
 
 }
 
@@ -245,4 +237,9 @@ footer {
 display: flex;
 flex-direction: column;
 gap: 0.5rem;
+}
+
+.icon-sect i{
+    border: 1px solid white;
+    border-radius: 50%;
 }
