--- a/index.css
+++ b/index.css
@@ -259,18 +259,27 @@ gap: 0.5rem;
     gap: 3rem;
 }
 
-@media (min-width: 375px) {
+@media (min-width: 375px) and (max-width: 576px) {
     body {
-        width: 100vw;  
+        width: 80vw; 
+        padding: 4.6rem 0rem; 
     }
 
-    /* .navbar {
+    .navbar {
         align-items: center;
-        justify-content: space-around;
-        padding-left: 10px;
-        padding-right: 10px;
-        /* width: 75vw; */
-     */
+        justify-content: space-between;
+        padding-left: 20px;
+      
+        width: 75vw;
+    }
+
+    .navbar .navList {
+      padding-left: 100px;
+    }
+
+    .second-sect {
+        background-position: right center;
+    }
 } 
 
 
