--- a/index.css
+++ b/index.css
@@ -259,29 +259,36 @@ gap: 0.5rem;
     gap: 3rem;
 }
 
-@media  (min-width: 375px) and (max-width: 600px) {
+@media (min-width: 375px) and (max-width: 576px) {
     body {
         width: 100vw; 
-        padding: 4.6rem 0rem; 
+        padding: 2.6rem 0rem; 
     }
 
     .navbar {
         align-items: center;
         justify-content: space-between;
-        padding-left: 2px;
-      
+        padding-left: 15px;
         width: 75vw;
+        /* gap: 2rem; */
+    }
+
+    .navList ul {
+        margin-top: -9px;
+        gap: 2rem;
+        justify-content: center;
+        margin-left: 30px;
     }
 
     .navbar .navList {
-      padding-left: 100px;
+        margin-left: 10px;
+        align-items: center;
     }
-
-    .second-sect {
-        background-position: right center;
+    .logo img {
+        width: 80px;
+        height: auto;
     }
-
-
+    
 } 
 
 
