--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ h2{
 
 
 .fylo{
-    color: white;
+    color: hsl(176, 68%, 64%);
     font-size: medium;
     /* padding-top: 15px; */
 }
@@ -259,7 +259,7 @@ gap: 0.5rem;
     gap: 3rem;
 }
 
-@media (min-width: 375px) and (max-width: 576px) {
+/* @media (max-width: 476px) {
     body {
         width: 100vw; 
         padding: 2.6rem 0rem; 
@@ -271,9 +271,9 @@ gap: 0.5rem;
         padding-left: 15px;
         width: 75vw;
         /* gap: 2rem; */
-    }
+    
 
-    .navList ul {
+    /* .navList ul {
         margin-top: -9px;
         gap: 2rem;
         justify-content: center;
@@ -288,8 +288,98 @@ gap: 0.5rem;
         width: 80px;
         height: auto;
     }
+
+    .second-sect {
+        background: url(/assets/bg-curvy-desktop.svg) left center;
+    } 
+} */
+@media (max-width: 576px) {
+    .navbar {
+      padding-left: 15px;
+    }
+  
+    .hero img {
+      width: 300px;
+    }
+  
+    .navList ul {
+      margin-top: -9px;
+      gap: 2rem;
+      justify-content: center;
+      margin-left: 30px;
+    }
+  
+    .navbar .navList {
+      margin-left: 10px;
+      align-items: center;
+    }
+    .logo img {
+      width: 80px;
+      height: auto;
+    }
+  
+    .second-sect {
+      display: flex;
+      flex-direction: column;
+      padding: 0 10px;
+    }
+
+    .third-sect {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+      }
     
-} 
+      .third-sect img {
+        width: 300px;
+      }
+    
+      .third-sect .content3 {
+        padding: 0 25px;
+        text-align: center;
+      }
+
+      .box-container {
+   
+        display: flex;
+        flex-direction: column;
+        padding: 0 25px;
+        align-items: center;
+    }
+
+    .fifth-sect {
+        width: 342px;
+        height: auto;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 35px;
+    }
+
+.fifth-sect h2 {
+    margin-top: 0.3rem;
+}
+
+    .forms {
+        flex-direction: column;
+    }
+
+    label input {
+        width: 90%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-top: 5px;
+    }
+
+    .buttons button {
+        width: 90%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-left: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+  }
+
 
 
   
